--- a/src/main/resources/dev/hmap/fxml/MainView.fxml
+++ b/src/main/resources/dev/hmap/fxml/MainView.fxml
@@ -8,7 +8,7 @@
 <AnchorPane stylesheets="/styles/styles.css" prefHeight="800.0" prefWidth="1200.0" styleClass="root-pane"
             xmlns="http://javafx.com/javafx/17"
             xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="dev.hmap.controllers.MainController">
+            fx:controller="dev.hmap.controller.MainController">
 
 
     <!-- Sidebar Menu -->
